--- a/src/App.css
+++ b/src/App.css
@@ -52,4 +52,8 @@
 
 .main-wrapper {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
