--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .app {
-  width: 20%;
-  margin: 0 auto;
+  width: 30%;
+
 }
 
 .keypad {
   width: 100%;
-  margin: 0 auto;
+
 }
 
 .numbers {
@@ -32,7 +32,7 @@
 
 .result {
   width: 100%;
-  background-color: darkgray;
+  background-color: lightgray;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -45,10 +45,11 @@
 .calculator-wrapper {
   width: 100%;
   height: 100%;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: flex-start;
   display: flex;
-  flex-direction: column;
+  background-color: yellowgreen;
+  padding-right: -20px;
 }
 
 .main-wrapper {
@@ -57,4 +58,69 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.navigation {
+  width: 100%;
+  background-color: yellow;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px;
+  margin: 0;
+}
+
+.navigation ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  margin-left: auto;
+  margin-right: 30px;
+}
+
+.navigation ul li {
+  margin: 5px 15px;
+}
+
+.mathmags {
+  font-size: 40px;
+}
+
+.home-wrapper {
+  background-color: yellowgreen;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+}
+
+.intro-wrapper {
+  margin-left: 100px;
+  width: 40%;
+  color: rgb(34, 34, 34);
+}
+
+.intro-wrapper p {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.intro-wrapper h3 {
+  color: rgb(19, 19, 19);
+  font-size: 25px;
+}
+
+.quote-wrapper {
+  background-color: yellowgreen;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.HomeTag{
+  margin-right: 20;
+  color: aqua;
 }
